Changes to font sizes and further details for the sign in app project

--- a/about_vedran.html
+++ b/about_vedran.html
@@ -20,7 +20,7 @@
 		<!-- ABOUT ME -->
 		<div class="section">
 			<div class="section__content section--first-in-section section--last-in-section">
-				<h1 class="section-heading">About me</h1>
+				<h1 class="h1-heading">About me</h1>
 					<p>I am a designer with over 10 years’ experience, focusing on user experience design, usability and interface design.</p> 
 					<p>I am currently working as a Senior UX Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://seek.com.au">Seek</a>.</p>
 
@@ -30,20 +30,20 @@
 
 		<div class="section section--light ">
 			<div class="sub-section__content sub-section--first-in-section">
-					<h2 class="sub-heading">Technical beginnings</h2>
+					<h2 class="h2-heading">Technical beginnings</h2>
 
 					<p>After graduating from Engineering (robotics) and Computer Science in 2004, I started my career as a System Design Engineer working on automated cancer diagnostics instruments. I developed a passion for observing how people interact with the machines, systems and software I designed. </p>
 			</div>
 			<div class="sub-section__content">
-					<h2 class="sub-heading">A turning point</h2>
+					<h2 class="h2-heading">A turning point</h2>
 
 					<p>A career shaping event was an opportunity to spend two years working in the UK and across Europe, studying how medical staff use cancer diagnostic instruments and helping them improve their processes.</p>
 					
-					<p>That was in 2006. That passion for observing how people interact with products and using those observations to design better experiences, lives on in me and is the key reason why I love what I do.</p>
+					<p>That was in 2007. That passion for observing how people interact with products and using those observations to design better experiences, lives on in me and is the key reason why I love what I do.</p>
 
 			</div>
 			<div class="sub-section__content sub-section--last-in-section">
-					<h2 class="sub-heading">My focus today</h2>
+					<h2 class="h2-heading">My focus today</h2>
 
 					<p>I am more and more interested in effects of cognitive psychology on users’ interaction with products.</p>
 					
