--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="header__image"></div>	
 				<div class="intro">
 					<div class="intro__content">
-						<h1 class="section-heading">Hello, I’m Vedran</h1>
+						<h1 class="h2-heading">Hello, I’m Vedran</h1>
 						<p>I am a designer.</p>
 						<p>I design digital products, the way people interact with them and experience them.</p>
 						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
@@ -34,7 +34,7 @@
 		<!-- MY WORK -->
 		<div class="section section--light section--first-in-section">
 			<div class="section__content">
-				<h2 class="section-heading">My work</h2>
+				<h2 class="h2-heading">My work</h2>
 					<p class="paragraph__home">Here you will find a collection of case studies focusing on my design process, as well as side projects I do out of love of design and passion for continued learning and self development.</p>
 				<a class ="link link--on-light-bg" href="vedrans_design_work.html">Explore my design work</a>
 			</div>
@@ -42,7 +42,7 @@
 		<!-- WRITING -->
 		<div class="section section--light">
 			<div class="section__content">
-				<h2 class="section-heading">Writing</h2>
+				<h2 class="h2-heading">Writing</h2>
 					<p class="paragraph__home">I won’t win the Pulitzer Prize, but writing about design helps me improve by questioning my own beliefs, sharing knowledge and creating dialog.</p>
 				<a class ="link link--on-light-bg" href="http://medium.com/@ThatBaldUXGuy" target="b">Read my posts on Medium</a>
 			</div>
@@ -50,7 +50,7 @@
 		<!-- DESIGN COMMUNITY -->
 		<div class="section section--light section--last-in-section">
 			<div class="section__content">
-				<h2 class="section-heading">Design community</h2>
+				<h2 class="h2-heading">Design community</h2>
 					<p class="paragraph__home">I am actively involved in local meetups and love sharing ideas and learning about other designers’ process.</p>
 					<!-- <p class="paragraph__home">I’ve presented at a number of meetups, and founded the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">Sarajevo UX meetup group</a>.</p> -->
 				<a class ="link link--on-light-bg" href="http://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">Browse my presentations</a>
