--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -21,9 +21,9 @@
 		<!-- MY WORK INTRO -->
 		<div class="section section--light">
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
-				<h1 class="section-heading">My work</h1>
+				<h1 class="h1-heading">My work</h1>
 					<p>I believe that design has more in common with science and engineering than art. Art is subjective, design is not – therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p> 
-					<p>Here is a selection of some of my work, illustrating my design process.</p>
+					<p>Here is a selection of my work, focusing on my process, rather than just the finished products.</p>
 			</div>
 		</div>
 
@@ -32,14 +32,14 @@
 
 			<div class="my-work-item my-work-item--with-ipad">
 
-				<h2 class="section-heading section-heading__with-ipad--vertically-stacked">Visitor registration app</h2>
+				<h2 class="h2-heading h2-heading__with-ipad--vertically-stacked">Visitor registration app</h2>
 		
 				<img class="my-work-item__image--ipad" src="/images/visitor_registration_iPad_app.png" alt="Visitor registration ipad app"/>
 
 
 
 				<div class="my-work-item__description--ipad">
-				<h2 class="section-heading section-heading__with-ipad--side-by-side">Visitor registration app</h2>
+				<h2 class="h2-heading h2-heading__with-ipad--side-by-side">Visitor registration app</h2>
 				<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
 				<p>The app is about to be deployed across 100s of gyms in the US.</p>
 				<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
@@ -50,7 +50,7 @@
 		<!-- CREDIT CARD PAYMENT -->
 		<div class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="section-heading">Credit card payment form</h2>
+					<h2 class="h2-heading">Credit card payment form</h2>
 
 					<div class="my-work-item__description">
 					<p>I redesigned the credit card payment form used during job ad posting. </p>
@@ -68,7 +68,7 @@
 
 			<div class="my-work-item my-work-item--with-full-width-image">
 				<div class="my-work-item__description--full-width-image">
-					<h2 class="section-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
+					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
 					<p class="text--on-dark-bg">I ran a two day design workshop for a development team in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
 					<p class="text--on-dark-bg">As a result, both the clients and the dev team were involved in the design process and everyone had a clear idea on how to proceed with the implementation.</p>
 					<p><a class ="link link--on-dark-bg" href="rubicon_workshop.html">Read case study</a></p>
@@ -79,7 +79,7 @@
 		<!-- GYM SALES SETTINGS -->
 		<div class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="section-heading">Design of a settings page</h2>
+					<h2 class="h2-heading">Design of a settings page</h2>
 
 					<div class="my-work-item__description">
 					<p>I redesigned an existing, complex, settings page for GymSales.</p>
@@ -95,7 +95,7 @@
 		<!-- SEEK REGISTRATION -->
 		<div class="section section--medium section--on-top">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="section-heading">Design of a repsonsive registration form</h2>
+					<h2 class="h2-heading">Design of a repsonsive registration form</h2>
 
 					<div class="my-work-item__description">
 					<p>I designed the registration form for employers using the Seek platform.</p>
