--- a/visitor_registration_app.html
+++ b/visitor_registration_app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Visitor registration app</title>
+		<title>Visitor registration iPad app</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
@@ -21,20 +21,20 @@
 		<!-- CASE STUDY INTRO -->
 		<div class="section section--medium">
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
-				<h1 class="section-heading">Visitor registration app</h1>
+				<h1 class="h1-heading">Visitor registration app</h1>
 					<p><a class ="link link--on-light-bg link--inline" target="_blank" href="http://gymsales.net">GymSales</a> are a provider of lead and member management software for gyms and fitness centres. They wanted to extend their product set to include an iPad application for management of visitor registrations.</p>
 			</div>
 		</div>
 
 		<div class="section section--light ">
 			<div class="sub-section__content sub-section--first-in-section">
-					<h2 class="sub-heading">The challenge</h2>
+					<h2 class="h2-heading">The challenge</h2>
 
 					<p>Gym receptions are busy places. Multiple instructors are meeting their students, loud music is playing, phones are ringing…</p> 
 					<p>GymSales wanted to provide gym visitors with a quick and painless way to register as visitors, while meeting gyms‘ data and legal requirements. Therein lied the biggest challenge for the project: how to collect all the data required, while keeping the process of registering quick and simple?</p>
 			</div>
 			<div class="sub-section__content">
-					<h2 class="sub-heading">Research</h2>
+					<h2 class="h2-heading">Research</h2>
 
 					<p>I hit the streets and walked to three different gyms where I signed up as a visitor in order to experience the registration process. The main learnings were:</p>
 					<ul class="list">
@@ -45,40 +45,63 @@
 					</ul>
 			</div>
 			<div class="sub-section__content">
-					<h2 class="sub-heading">Simplify from the start</h2>
+					<h2 class="h2-heading">Simplify from the start</h2>
 
-					<p>Before starting any design, I talk to the client about minimising the amount of inofmation we collect.</p>
+					<p>Before starting any design, I talked to the client about minimising the amount of inofmation we collect.</p>
 					<p>The principle we ended up agreeing on is that if the information was not required during the 'visitor' period, we did not need to collect it with this app. Any information that was required for full members would be collected once (if) they signed up as full members.</p>
 			</div>
 			<div class="sub-section__content">
-					<h2 class="sub-heading">Animation and the perception of effortlessness</h2>
+					<h2 class="h2-heading">Animation and the perception of effortlessness</h2>
 
-					<p>I was keen for the process of registering to feel as effortless as possible. Once the amount of information was minimised, I turned to animation design in order to come up with screen transitions which gave the impression of speed, smooth movement and progress.</p>
-					<p>Elements logically morph into each other</p>
-					<img class="animation-example" src="/images/button_morph_animation.gif">
-					<p>Objects don’t just appear on the screen. They enter and leave the screen in an orchestrated manner.</p>
-					<p>Movement of individual elements overlaps by a 0.1s, in order to create a sense of smooth continuity</p>
-					<p>All animations used an ease-in/ease-out curve with the exception of error messages – error messages spring onto the screen in order to draw attention.</p>
-	
+					<p>I was keen for the process of registering to feel as effortless as possible. Once the amount of information was minimised, I turned to animation design, using <a class="link link--on-light-bg link--inline" href="http://principleformac.com/">Principle</a>, in order to come up with screen transitions which gave the impression of speed, smooth movement and progress.</p>
+					
+					<div class="sub-section__content sub-section__content--no-margins">
+						<h3 class="h3-heading">Elements logically morph into each other</h3>
+						<p>Where it makes sense, elements morph into each other. This is preferred to elements dissapearing and new ones appearing as it enhances the feeling of continuity.</p>
+						<img class="animation-example" src="/images/button_morph_animation.gif">
+					</div>
+					
+					<div class="sub-section__content sub-section__content--no-margins">
+						<h3 class="h3-heading">Object origin</h3>
+						<p>Objects don’t just appear on the screen. They have a point of origin, and a destination so that they can enter and leave the screen in an orchestrated manner.</p>
+						<img class="animation-example" src="/images/elements_appearing.gif">
+					</div>
+					<div class="sub-section__content sub-section__content--no-margins">
+						<h3 class="h3-heading">Animation continuity</h3>
+						<p>Movement of individual elements overlaps by a 0.2s, in order to create a sense of smooth continuity.</p>
+						<img class="image--medium" src="/images/animation_overlap.png">
+					</div>
+					<div class="sub-section__content sub-section__content--no-margins">
+						<h3 class="h3-heading">Breaking animation consistency for emphasis</h3>
+						<p>All animations use an ease-in/ease-out curve with the exception of error messages. Error messages spring onto the screen in order to create emphasis.</p>
+						<img class="animation-example" src="/images/error_animation.gif">
+					</div>
 			</div>
 			<div class="sub-section__content">
-					<h2 class="sub-heading">Oversized input controls</h2>
+					<h2 class="h2-heading">Oversized input controls</h2>
 
 					<p>From my research, I knew that the existing forms were physically cramped and difficult to fill out – I didn't want this application to feel like a form, hence I opted to use large, oversized elements, such as the input fields, action buttons and links.</p>
+
+					<img class="image--medium" src="/images/input_element_dimensions.png">
 			</div>
 			<div class="sub-section__content">
-					<h2 class="sub-heading">Usability testing</h2>
+					<h2 class="h2-heading">Usability testing</h2>
 
 					<p>I improvised in order to recruit subjects for my usability testing – I reached out to friends and acquaintances who joined a gym within the last year. I managed to find four people very quickly and tested the app prototype.</p>
 					<p>The key change made after the usability testing was to provide explanation as to why the phone number was needed – some people were uncomfortable with providing this information.</p>
 			</div>
 			<div class="sub-section__content">
-					<h2 class="sub-heading">Design handoff</h2>
+					<h2 class="h2-heading">Branding customisation</h2>
 
-					<p>The developers I worked with on this app were located in Russia. I wanted to make sure that none of the subtleties of the animation I designed were lost in the handoff process. I came up with a way of documenting the animation details, which ensured that the final product closely resembled my design.</p>
+					<p>Finally, I had to make sure that the visual design can accomodate different branding, as this app was to be used by different gyms.</p>
+					<p>I created a set of guidelines to make sure that different colour schemes could be applied to the app, while keeping text accessible and maintaining the app‘s visual identity.</p>
+
+					<img class="image--medium" src="/images/branding.png">
+
+
 			</div>
 			<div class="sub-section__content sub-section--last-in-section">
-					<h2 class="sub-heading">The outcome</h2>
+					<h2 class="h2-heading">The outcome</h2>
 
 					<p>The app was finished in May 2016 and is due to be rolled out to 100s of gyms around the USA in the coming months.</p>
 			</div>
