Added content for rubicon workshop facilitation item

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -66,18 +66,47 @@
 		<!-- RUBICON WORKSHOP -->
 		<div class="section">
 
-			<div class="my-work-item my-work-item--with-full-width-image">
+			<div class="my-work-item my-work-item_full-width-image--rubicon">
 				<div class="my-work-item__description--full-width-image">
 					<h2 class="h2-heading text--on-dark-bg">Workshop facilitation and wireframe design</h2>
 					<p class="text--on-dark-bg">I ran a two day design workshop for a development team in Sarajevo, and their Dutch clients, followed by wireframe designs for the entire product.</p>
 					<p class="text--on-dark-bg">As a result, both the clients and the dev team were involved in the design process and everyone had a clear idea on how to proceed with the implementation.</p>
-					<p><a class ="link link--on-dark-bg" href="rubicon_workshop.html">Read case study</a></p>
+					<p><a class ="link link--on-dark-bg" href="design_workshop_facilitation_with_rubicon.html">Read case study</a></p>
+				</div>				
+			</div>
+		</div>
+
+		<!-- SEEK REGISTRATION -->
+		<div class="section section--light ">
+			<div class="my-work-item my-work-item--with-desktop-browser">
+					<h2 class="h2-heading">Design of a repsonsive registration form</h2>
+
+					<div class="my-work-item__description">
+					<p>I designed the registration form for employers using the Seek platform.</p>
+					<p>The new design allowed registration on mobile devices for the first time, simplifed and sped up the process and resulted in X% in form completion rate</p>
+					<p><a class ="link link--on-light-bg" href="seek_registration_form.html">Read case study</a></p>
+					</div>
+
+					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Registration form within a browser window"/>
+
+			</div>
+		</div>
+
+		<!-- KOLEKTIV.BA USABILITY TESTING -->
+		<div class="section">
+
+			<div class="my-work-item my-work-item_full-width-image--kolektiv">
+				<div class="my-work-item__description--full-width-image">
+					<h2 class="h2-heading text--on-dark-bg">Coaching an organisation in usability testing</h2>
+					<p class="text--on-dark-bg">I worked with one of the biggest online organisations in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
+					<p class="text--on-dark-bg">The <a class ="link link--on-dark-bg link--inline" href="http://kolektiv.ba/">Kolektiv</a> team saw the power of insights gained through usability testing for the first time and have since incorporated it into their product development process.</p>
+					<p><a class ="link link--on-dark-bg" href="kolektiv_usability_testing.html">Read case study</a></p>
 				</div>				
 			</div>
 		</div>
 		
 		<!-- GYM SALES SETTINGS -->
-		<div class="section section--light">
+		<div class="section section--light section--on-top">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Design of a settings page</h2>
 
@@ -92,21 +121,7 @@
 			</div>
 		</div>
 
-		<!-- SEEK REGISTRATION -->
-		<div class="section section--medium section--on-top">
-			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="h2-heading">Design of a repsonsive registration form</h2>
-
-					<div class="my-work-item__description">
-					<p>I designed the registration form for employers using the Seek platform.</p>
-					<p>The new design allowed registration on mobile devices for the first time, simplifed and sped up the process and resulted in X% in form completion rate</p>
-					<p><a class ="link link--on-light-bg" href="seek_registration_form.html">Read case study</a></p>
-					</div>
-
-					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Registration form within a browser window"/>
-
-			</div>
-		</div>
+		
 
 
 
