--- a/visitor_registration_app.html
+++ b/visitor_registration_app.html
@@ -103,7 +103,8 @@
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">The outcome</h2>
 
-					<p>The app was finished in May 2016 and is due to be rolled out to 100s of gyms around the USA in the coming months.</p>
+					<p>The app was finished in May 2016 and has been rolled out to over a thousand gyms around the USA.</p>
+					<p>A further sign of success was that the major client, Snap Fitness, requested for the app to be extended to cover their entire member signup process.</p>
 			</div>
 		</div>
 
