kolektiv usability testing section added

--- a/about_vedran.html
+++ b/about_vedran.html
@@ -32,7 +32,7 @@
 			<div class="sub-section__content sub-section--first-in-section">
 					<h2 class="h2-heading">Technical beginnings</h2>
 
-					<p>After graduating from Engineering (robotics) and Computer Science in 2004, I started my career as a System Design Engineer working on automated cancer diagnostics instruments. I developed a passion for observing how people interact with the machines, systems and software I designed. </p>
+					<p>After graduating from Engineering (robotics) and Computer Science in 2004, I started my career as a System Design Engineer working on automated cancer diagnostics instruments. I developed a passion for observing how people interact with the machines, systems and software I designed.</p>
 			</div>
 			<div class="sub-section__content">
 					<h2 class="h2-heading">A turning point</h2>
@@ -45,12 +45,11 @@
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">My focus today</h2>
 
-					<p>I am more and more interested in effects of cognitive psychology on users’ interaction with products.</p>
-					
-					<p>I am also focused on continually evolving my design process, both individually and within the teams I work with.</p>
+					<p>Evolution of my design process and the process of the teams I work with, is something I am very interested in. I am focused on experimenting with, and continuously improving these processes.</p>
 
-					<p>I evangelise for use of modern design tools, colaborative design practices and early and continued involvement of users in the design process.</p>
+					<p>I am a big advocate for use of modern design tools, colaborative design practices and early and continued involvement of users in the design process.</p>
 
+					<p>Sharing knowledge, with people I work with and across the design community, is something I’m passionate about. To this end, I have started a<a class ="link link--on-light-bg link--inline" target="_blank" href=https://www.meetup.com/Sarajevo-UX-Design/> UX design meetup group</a>, presented at<a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/presentations"> other meetup groups</a> and actively <a class ="link link--on-light-bg link--inline" target="_blank" href="http://medium.com/@ThatBaldUXGuy">write</a> about design.</p>
 			</div>
 		</div>
 
