--- a/design_workshop_facilitation_with_rubicon.html
+++ b/design_workshop_facilitation_with_rubicon.html
@@ -50,7 +50,7 @@
 			<div class="sub-section__content">
 					<h2 class="h2-heading">Workshop planning</h2>
 
-					<p>I spent about half a day coming up with a <a class ="link link--on-light-bg link--inline" target="_blank" href="https://docs.google.com/document/d/1-KMmRPKAmp5R-mmDty8x7VkCjmbSbuX3Kx4SdJmOVWI/edit?usp=sharing">workshop plan</a>.</p>
+					<p>I spent about half a day coming up with the <a class ="link link--on-light-bg link--inline" target="_blank" href="https://docs.google.com/document/d/1-KMmRPKAmp5R-mmDty8x7VkCjmbSbuX3Kx4SdJmOVWI/edit?usp=sharing">workshop plan</a>.</p>
 					<p>The fact that the client had an existing, validated product, justified the decision not to validate our design with users at this stage. Because the clients were coming to Sarajevo from The Netherlands, I knew I had limited time to work with, so I focused on group discovery and collaborative design, in order to make best use of everyone’s time.</p>
 			</div>
 
@@ -84,7 +84,7 @@
 
 					<img class="image--medium" src="/images/rubicon_invision_prototype_sample.png">
 
-					<p>The visual design for this product was handed over to a designer in The Netherlands as it was outside of the scope for my engagement.</p>
+					<p>The visual design for this product was handed over to a designer in The Netherlands.</p>
 			</div>
 			
 			<div class="sub-section__content sub-section--last-in-section">
