--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -98,9 +98,9 @@
 			<div class="my-work-item my-work-item_full-width-image--kolektiv">
 				<div class="my-work-item__description--full-width-image">
 					<h2 class="h2-heading text--on-dark-bg">Coaching an organisation in usability testing</h2>
-					<p class="text--on-dark-bg">I worked with one of the biggest online organisations in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
+					<p class="text--on-dark-bg">I worked with an organisations in Bosnia to introduce them to usability testing and coach them on how to incorporate usability testing into their product development process.</p>
 					<p class="text--on-dark-bg">The <a class ="link link--on-dark-bg link--inline" href="http://kolektiv.ba/">Kolektiv</a> team saw the power of insights gained through usability testing for the first time and have since incorporated it into their product development process.</p>
-					<p><a class ="link link--on-dark-bg" href="kolektiv_usability_testing.html">Read case study</a></p>
+					<p><a class ="link link--on-dark-bg" href="usability_testing_with_kolektiv.html">Read case study</a></p>
 				</div>				
 			</div>
 		</div>
