--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<div class="intro__content">
 						<h1 class="h2-heading">Hello, I’m Vedran</h1>
 						<p>I am a designer.</p>
-						<p>I design digital products, the way people interact with them and experience them.</p>
+						<p>I design digital products and the way people interact with them.</p>
 						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
 					</div>
 				</div>
