Seek credit card form redesign

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -54,11 +54,11 @@
 
 					<div class="my-work-item__description">
 					<p>I redesigned the credit card payment form used during job ad posting. </p>
-					<p>The redesign caused a 45% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
-					<p><a class ="link link--on-light-bg" href="credit_card_payment_form.html">Read case study</a></p>
+					<p>The redesign caused a 150% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
+					<p><a class ="link link--on-light-bg" href="seek_credit_card_form_redesign.html">Read case study</a></p>
 					</div>
 
-					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Credit card payment form shown in browser"/>
+					<img class="my-work-item__image--browser-centred" src="/images/browser_with_card_form.png" alt="Credit card payment form shown in browser"/>
 
 			</div>
 		</div>
@@ -79,7 +79,7 @@
 		<!-- SEEK REGISTRATION -->
 		<div class="section section--light ">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="h2-heading">Design of a repsonsive registration form</h2>
+					<h2 class="h2-heading">Design of a responsive registration form</h2>
 
 					<div class="my-work-item__description">
 					<p>I designed the registration form for employers using the Seek platform.</p>
