First cut of the GS settings page case study

--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -22,8 +22,11 @@
 		<div class="section section--light">
 			<div class="section__content section--first-in-section section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">My work</h1>
-					<p>I believe that design has more in common with science and engineering than art. Art is subjective, design is not – therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p> 
-					<p>Here is a selection of my work, focusing on my process, rather than just the finished products.</p>
+					<p>Design has more in common with science and engineering than art. Art is subjective, design is not. Therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p> 
+					<p>Here is a selection of my work, focusing on my design and thought process, rather than just the finished products.</p>
+					<p>If you want to see more of my work, <a class ="link link--on-light-bg link--inline" href="mailto:vedran.arnautovic@gmail.com">get in touch</a>.</p>
+
+
 			</div>
 		</div>
 
@@ -41,7 +44,7 @@
 				<div class="my-work-item__description--ipad">
 				<h2 class="h2-heading h2-heading__with-ipad--side-by-side">Visitor registration app</h2>
 				<p>I designed a customisable visitor registration iPad app, specifically for gyms and fitness centres.</p>
-				<p>The app is about to be deployed across 100s of gyms in the US.</p>
+				<p>The app has beend deployed to over a thousand gyms across the US.</p>
 				<p><a class ="link link--on-light-bg" href="visitor_registration_app.html">Read case study</a></p>
 				</div>
 			</div>
@@ -111,12 +114,12 @@
 					<h2 class="h2-heading">Design of a settings page</h2>
 
 					<div class="my-work-item__description">
-					<p>I redesigned an existing, complex, settings page for GymSales.</p>
-					<p>The new design allowed easier comprehension of the complex settings options and allowed for future growth of the page.</p>
-					<p><a class ="link link--on-light-bg" href="gym_sales_settings.html">Read case study</a></p>
+					<p>GymSales’ settings page had become unwieldy and difficult to navigate. It was hard to add new content in a logical way.</p>
+					<p>My re-design allowed easier comprehension of the complex settings options and allowed for future growth of the page.</p>
+					<p><a class ="link link--on-light-bg" href="gymsales_settings_page.html">Read case study</a></p>
 					</div>
 
-					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Settings page shown within a browser window"/>
+					<img class="my-work-item__image--browser-centred" src="/images/browser_with_settings_page.png" alt="Settings page shown within a browser window"/>
 
 			</div>
 		</div>
