design sprint section first cut

--- a/about_vedran.html
+++ b/about_vedran.html
@@ -52,6 +52,7 @@
 					<p>Sharing knowledge, with people I work with and across the design community, is something I’m passionate about. To this end, I have started a<a class ="link link--on-light-bg link--inline" target="_blank" href=https://www.meetup.com/Sarajevo-UX-Design/> UX design meetup group</a>, presented at<a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.slideshare.net/ThatBaldUXGuy/presentations"> other meetup groups</a> and actively <a class ="link link--on-light-bg link--inline" target="_blank" href="http://medium.com/@ThatBaldUXGuy">write</a> about design.</p>
 			</div>
 		</div>
+		<img class="image--full-width" src="/images/family.jpg" alt="Vedran's family"/>
 
 
 		
