--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -24,7 +24,7 @@
 				<h1 class="h1-heading">My work</h1>
 					<p>Design has more in common with science and engineering than art. Art is subjective, design is not. Therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p> 
 					<p>Here is a selection of my work, focusing on my design and thought process, rather than just the finished products.</p>
-					<p>If you want to see more of my work, <a class ="link link--on-light-bg link--inline" href="mailto:vedran.arnautovic@gmail.com">get in touch</a>.</p>
+					<p>If you want to see more of my work, <a class ="link link--on-light-bg link--inline" target="_blank" href="mailto:vedran.arnautovic@gmail.com">email me</a> or connect via <a class ="link link--on-light-bg link--inline" href="https://twitter.com/ThatBaldUXGuy">Twitter</a>.</p>
 
 
 			</div>
@@ -50,18 +50,18 @@
 			</div>
 		</div>
 
-		<!-- CREDIT CARD PAYMENT -->
+		<!-- DESIGN SPRINT -->
 		<div class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
-					<h2 class="h2-heading">Credit card payment form</h2>
+					<h2 class="h2-heading">Design sprint for JoraLocal</h2>
 
 					<div class="my-work-item__description">
-					<p>I redesigned the credit card payment form used during job ad posting. </p>
-					<p>The redesign caused a 150% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
-					<p><a class ="link link--on-light-bg" href="seek_credit_card_form_redesign.html">Read case study</a></p>
+					<p>During a week long design sprint, we designed, tested and validated a product idea for an increasingly important market segment for SEEK.</p>
+					<p>The output of the design sprint allowed SEEK to further validate the product idea, and eventually create a spin-off company, JoraLocal, to take the product to market.</p>
+					<p><a class ="link link--on-light-bg" href="seek_design_sprint.html">Read case study</a></p>
 					</div>
 
-					<img class="my-work-item__image--browser-centred" src="/images/browser_with_card_form.png" alt="Credit card payment form shown in browser"/>
+					<img class="my-work-item__image--browser-centred" src="/images/browser_with_joralocal_page.png" alt="Credit card payment form shown in browser"/>
 
 			</div>
 		</div>
@@ -79,8 +79,24 @@
 			</div>
 		</div>
 
+		<!-- CREDIT CARD PAYMENT -->
+		<div class="section section--light">
+			<div class="my-work-item my-work-item--with-desktop-browser">
+					<h2 class="h2-heading">Credit card payment form</h2>
+
+					<div class="my-work-item__description">
+					<p>I redesigned the credit card payment form used during job ad posting. </p>
+					<p>The redesign caused a 150% increase in customers paying upfront (rather than by invoice), resulting in a six figure increase in upfront cash flow.</p>
+					<p><a class ="link link--on-light-bg" href="seek_credit_card_form_redesign.html">Read case study</a></p>
+					</div>
+
+					<img class="my-work-item__image--browser-centred" src="/images/browser_with_card_form.png" alt="Credit card payment form shown in browser"/>
+
+			</div>
+		</div>
+
 		<!-- SEEK REGISTRATION -->
-		<div class="section section--light ">
+<!-- 		<div class="section section--light ">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Design of a responsive registration form</h2>
 
@@ -93,7 +109,7 @@
 					<img class="my-work-item__image--browser-centred" src="/images/Browser.png" alt="Registration form within a browser window"/>
 
 			</div>
-		</div>
+		</div> -->
 
 		<!-- KOLEKTIV.BA USABILITY TESTING -->
 		<div class="section">
@@ -123,6 +139,32 @@
 
 			</div>
 		</div>
+
+		<!-- SIDE PROJECTS -->
+<!-- 		<div class="section section--medium section--on-top">
+			<div class="my-work-item my-work-item--side-projects">
+					<h2 class="h2-heading">Side projects</h2>
+
+					<div class="my-work-item__description">
+					<p>Here are some other things I've designed, and in some cases helped develop.</p>
+					</div>					
+
+					<div class="my-work-item__image--side-projects-container">
+					<a target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">
+						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_walnut.png" alt="Walnut Art App logo"/>
+					</a>
+					<a target="_blank" href="http://react-autosuggest.js.org/">
+						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_react_auto-suggest.png" alt="React Autosuggest logo"/>
+					</a>
+					<a target="_blank" href="http://accessible-colors.com/">
+						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_accessible_colors.png" alt="Accessible Colours logo"/>
+					</a>
+					<a target="_blank" href="https://www.minty.ninja/">
+						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo"/>
+					</a>
+					</div>
+			</div>
+		</div> -->
 
 		
 
