--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -150,22 +150,34 @@
 					</div>					
 
 					<div class="my-work-item__image--side-projects-container">
-					<a target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">
-						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_walnut.png" alt="Walnut Art App logo"/>
-					</a>
-					<a target="_blank" href="http://react-autosuggest.js.org/">
-						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_react_auto-suggest.png" alt="React Autosuggest logo"/>
-					</a>
-					<a target="_blank" href="http://accessible-colors.com/">
-						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_accessible_colors.png" alt="Accessible Colours logo"/>
-					</a>
-					<a target="_blank" href="https://www.minty.ninja/">
-						<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo"/>
-					</a>
+						<div class="my-work-item__side-project">
+							<a target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">
+								<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_walnut.png" alt="Walnut Art App logo"/>
+								<span class="side-project-name"><span>Walnut Art App</span></span>
+							</a>
+						</div>
+						<div class="my-work-item__side-project">
+							<a target="_blank" href="http://react-autosuggest.js.org/">
+								<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_react_auto-suggest.png" alt="React Autosuggest logo"/>
+								<span class="side-project-name"><span>react-autosuggest.js.org</span></span>
+							</a>
+						</div>
+						<div class="my-work-item__side-project">
+							<a target="_blank" href="http://accessible-colors.com/">
+								<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_accessible_colors.png" alt="Accessible Colours logo"/>
+								<span class="side-project-name"><span>accessible-colors.com</span></span>
+							</a>
+						</div>
+						<div class="my-work-item__side-project">
+							<a target="_blank" href="https://www.minty.ninja/">
+								<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_minty_ninja.png" alt="Minty Ninja logo"/>
+								<span class="side-project-name"><span>minty.ninja</span></span>
+							</a>
+						</div>
 					</div>
 			</div>
-		</div> -->
-
+		</div>
+ -->
 		
 
 
