--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -141,19 +141,20 @@
 		</div>
 
 		<!-- SIDE PROJECTS -->
-<!-- 		<div class="section section--medium section--on-top">
+		<div class="section section--medium section--on-top">
 			<div class="my-work-item my-work-item--side-projects">
 					<h2 class="h2-heading">Side projects</h2>
 
 					<div class="my-work-item__description">
-					<p>Here are some other things I've designed, and in some cases helped develop.</p>
+					<p>Here are some side projects I worked on in my spare time. I do these things out of love for design and desire for constant learning, and because it beats watching TV.</p>
+					<p>Looking back at some of these makes me cringe, but I can’t hide from the things I’ve done – they all make me the designer I am today.</p>
 					</div>					
 
-					<div class="my-work-item__image--side-projects-container">
+					<div class="my-work-item--side-projects-container">
 						<div class="my-work-item__side-project">
 							<a target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">
 								<img class="my-work-item__image--side-project-link" src="/images/side_project_logo_walnut.png" alt="Walnut Art App logo"/>
-								<span class="side-project-name"><span>Walnut Art App</span></span>
+								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
@@ -177,7 +178,7 @@
 					</div>
 			</div>
 		</div>
- -->
+
 		
 
 
