image captions implemented

--- a/seek_credit_card_form_redesign.html
+++ b/seek_credit_card_form_redesign.html
@@ -41,7 +41,8 @@
 
 					<p>The existing online payment form was archaic to say the least. A form that looks this falls short in the task of instilling confidence.</p>
 
-					<img class="image--medium" src="/images/seek_existing_credit_card_form.png">
+					<img class="image--medium image--with-caption" src="/images/seek_existing_credit_card_form.png">
+					<div class="image-caption">The existing card form left a lot of space for improvement</div>
 
 					<h3 class="h3-heading">Issues with the existing form</h3>
 					<ul class="list">
@@ -71,7 +72,8 @@
 
 					<p>The first is the <a class ="link link--on-light-bg link--inline" target="_blank" href="http://bradfrost.com/blog/post/single-field-credit-card-input-pattern/">single field card form</a>, popularised by Brad Frost.</p>
 
-					<img class="image--medium" src="/images/seek_credit_card_single-cc-demo.gif">
+					<img class="image--medium image--with-caption" src="/images/seek_credit_card_single-cc-demo.gif">
+					<div class="image-caption">Cool and innovative, but not fit for our audience</div>
 
 					<p>This is a brilliantly elegant solution, particulary for mobile phones where space is at a premium. I chose not to use it for two reasons. Firstly, our form was being built exclusively for desktop. More importantly, SEEK caters to an extremely diverse audience of users with varying levels of computer literacy – providing credit card details this way would not be familiar to most of our audience.</p>  
 
@@ -97,11 +99,13 @@
 					<p>The first step in nudging more people to pay by card, was to make the ‘Pay via credit card’ option more prominent</p>
 					<p>The current design had the two options presented with equal visual weight.</p>
 
-					<img class="image--medium" src="/images/seek_card_presentation_of_options.png">
+					<img class="image--medium image--with-caption" src="/images/seek_card_presentation_of_options.png">
+					<div class="image-caption">Payment options with equal weight on the right</div>
 
 					<p>While leaving both options available, I changed this to make the card option much more prominent than the invoice option.</p>
 
-					<img class="image--medium" src="/images/seek_card_presentation_of_options2.png">
+					<img class="image--medium image--with-caption" src="/images/seek_card_presentation_of_options2.png">
+					<div class="image-caption">Preferred payment option clearly santds out – bottom left</div>
 
 					<h3 class="h3-heading">Input masking</h3>
 					<p>Transcribing long numbers into an online form is hard, because it is easy to lose track of where you are up to. For this reason, input masking that reflects the grouping of card numbers on the card itself makes number entry much easier.</p>
