--- a/seek_design_sprint.html
+++ b/seek_design_sprint.html
@@ -36,36 +36,44 @@
 
 					<h3 class="h3-heading">Day 1 – Unpack and immerse</h3>
 					<p>The first day was spent ‘unpacking’ all the information we knew about our target audience. The stragegy team shared their knowledge gathered through Jobs To Be Done reseaerch. We also had representatives form customer support and sales share their kowledge, since they spend most of time with customers.</p>
-					<img class="image--medium" src="/images/seek_design_sprint_unpack.jpg">
+					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_unpack.jpg">
+					<div class="image-caption">The team paying close attention to research findings</div>
 					<p>Us designers chipped in with our insights gathered through extensive user research conducted over the past couple of years.</p>
 					<p>At the end of the day we had a lot of information covering the walls of our design room which needed to be sythesised into something useful.</p>
 					<h3 class="h3-heading">Day 2 – Build empathy</h3>
 					<p>We took the information we shared on day 1, and set to work building empathy maps and customer journey maps. This would form the foundation of insights we would use to decide which opportunities to focus our attention on during the ideation phase.</p>
-					<img class="image--medium" src="/images/seek_design_sprint_empathy_map.jpg">
+					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_empathy_map.jpg">
+					<div class="image-caption">One of the empathy maps we built</div>
 					<h3 class="h3-heading">Day 3 & 4– Ideate and test</h3>
 					<p>In order to design a solution for this target segment, we had to priritise the opportunities we identified through empathy and customer journey maps.</p>
 					<p>Once we agreed on our priorities, the team set out to design potential solutions, using the <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/two-types-of-collaborative-design-sessions-46c6d7090b70#.q12go7h1x">design studio method</a>.</p>
 					<img class="image--medium" src="/images/seek_desing_sprint_sketch.jpeg">
 					<p>However, we had to work quickly – during each of the two ideation days, we also had real users coming in during the afternoon to test our designs, using paper prototypes.</p>
-					<img class="image--medium" src="/images/seek_design_sprint_test.png">
+					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_test.png">
+					<div class="image-caption">Paper prototype testing with a bar owner</div>
 					<h3 class="h3-heading">Day 5 – Converge</h3>
 					<p>Day 5 was spent taking stock of everything we learnt during the unpacking phase, as well as from the feedback we gathered from our users.</p>
 					<p>After organising all the information, we voted on and prioritised the ideas we developed during the previous two days.</p>
-					<img class="image--medium" src="/images/seek_design_sprint_converge.jpeg">
+					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_converge.jpeg">
+					<div class="image-caption">Voting on design features to take to the next phase</div>
 					<h3 class="h3-heading">Day 6 – Prototype</h3>
 					<p>With most of the decisions made, we could focus on cranking out the prototype. The only thing left to desig at this point was the navigation model for the app, since we wanted the users to be able to use the app as they would in real life. We quickly put pen-to-paper to investigate possible options.</p>
-					<img class="image--medium" src="/images/seek_desing_sprint_nav_model.png"> 
+					<img class="image--medium image--with-cation" src="/images/seek_desing_sprint_nav_model.png"> 
+					<div class="image-caption">Designing our nav model on paper</div>
 					<p>At this point, most of the team want to their day-to-day jobs, while one of my designer colleagues and I dove into prototyping the mobile application we needed to validate our idea with real users.</p>
 					<p>We designed in Sketch and prototpyed the applciation using <a class ="link link--on-light-bg link--inline" target="_blank" href="https://marvelapp.com/">Marvel</a>.</p>
 
-					<img class="image--medium" src="/images/seek_design_sprint_prototype.png"> 
+					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_prototype.png"> 
+					<div class="image-caption">One of the many sets of artobards in Sketch</div>
 
-					<img class="image--small" src="/images/seek_design_sprint_marvel.png"> 
+					<img class="image--small image--with-caption" src="/images/seek_design_sprint_marvel.png"> 
+					<div class="image-caption">A screen from the prototype</div>
 
 					
 					<h3 class="h3-heading">Day 7 – Guerilla testing</h3>
 					<p>The final day was the most daunting, but also most rewarding. We split into pairs and hit the streets with our prototpyed app in hand. Walking into cafes and restaurants, we tested the app with owners and shift managers.</p>
-					<img class="image--medium" src="/images/seek_design_sprint_guerilla_test.jpg">
+					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_guerilla_test.jpg">
+					<div class="image-caption">Me, guerilla testing with a local cafe owner</div>
 					<p>We received a lot of feedback – some positive, and some negative, but always constructive in terms of giving us a direction to pursue.</p>
 					<p>If I learnt one thing from this guerilla testing exercise, it was that when you go out to your users unannounced, you face an altogether different type of reaction. Users are more likely to reject your idea and to provide critical feedback.</p>
 			</div>
@@ -78,7 +86,8 @@
 
 					<p>Since running the design sprint, we have created a spin-off company to take this product to market – that is how JoraLocal was born.</p>
 
-					<img class="image--medium" src="/images/seek_design_sprint_jora.png">
+					<img class="image--medium image--with-caption" src="/images/seek_design_sprint_jora.png">
+					<div class="image-caption">Some of the screens frome the live product</div>
 
 					<p>The sprint itself was a major success, now it is up to us to further refine the idea as we take the JoraLocal product to market.</p>
 
