--- a/design_workshop_facilitation_with_rubicon.html
+++ b/design_workshop_facilitation_with_rubicon.html
@@ -60,19 +60,22 @@
 					<h3 class="h3-heading">Day one</h3>
 					<p>The first day of the workshop was spent on discovery activities including empathy mapping and product mapping. This allowed the whole team, from the product owners to the developers and testers, to gain a common understanding of the problem we were trying to solve.</p>
 
-					<img class="image--medium" src="/images/rubicon_empathy_map.jpg">
+					<img class="image--medium image--with-caption" src="/images/rubicon_empathy_map.jpg">
+					<div class="image-caption">One of the Rubicon devs adding to our empathy map</div>
 
 					<p>Empathy mapping was particularly useful as it allowed the team to put themselves in the shoes of the end users. Later on, as we started getting into the design, we often reflected on what we discovered during empathy mapping.</p>
 					
 					<h3 class="h3-heading">Day two</h3>
 					<p>Once we had a good understanding of the existing product and it’s audience, we spent the second day designing the product together. We used a couple of collaborative design techniques<a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/two-types-of-collaborative-design-sessions-46c6d7090b70#.vchxvmfst"> I wrote about before</a>, as well as a <a class ="link link--on-light-bg link--inline" target="_blank" href="https://medium.com/seek-user-experience/4-simple-steps-to-improve-your-ui-sketches-4ad2f1433373#.fecl4kbil">sketching technique</a> I had used a number of times.</p>
 
-					<img class="image--medium" src="/images/rubicon_design_sketching.jpg">
+					<img class="image--medium image--with-caption" src="/images/rubicon_design_sketching.jpg">
+					<div class="image-caption">The Rubicon team and the clients sketching together</div>
 
 					<p>The key here was that everyone was inloved in the design. This was something new for both Rubicon and their clients.</p>
 					<p>At the end of the day, there was a feeling that we came up with some great ideas, but most importantly, that we were all involved in the design and decision making proces.</p>
 
-					<img class="image--medium" src="/images/rubicon_discussing_design.jpg">
+					<img class="image--medium image--with-caption" src="/images/rubicon_discussing_design.jpg">
+					<div class="image-caption">One of the clients presenting his designs</div>
 			</div>
 
 			<div class="sub-section__content">
@@ -80,7 +83,8 @@
 
 					<p>With designs and user flows agreed upon, I took our sketches and started work on detailed wireframes. Designing in Sketch and prototyping with InVision, allowed me to turn around a full product low-fi prototype, and gather client feedback within three days.</p>
 
-					<img class="image--medium" src="/images/rubicon_sketch_wireframes.png">
+					<img class="image--medium image--with-caption" src="/images/rubicon_sketch_wireframes.png">
+					<div class="image-caption">Part of the Sketch file I produced as my final output</div>
 
 					<img class="image--medium" src="/images/rubicon_invision_prototype_sample.png">
 
