--- a/visitor_registration_app.html
+++ b/visitor_registration_app.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
+		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>	
